feature: add patch and delete endpoint
